fixed overlapping

--- a/public/assets/css/aktivitaeten.styl
+++ b/public/assets/css/aktivitaeten.styl
@@ -14,6 +14,7 @@
 
 .generalActivities
   margin-bottom 2rem
+  display inline-table
 
 /*Iphone*/
 @media only screen  and (min-device-width: 375px)  and (max-device-width : 667px),
@@ -33,6 +34,3 @@
       padding 0 1rem
       line-height 4rem
       font-size 3rem
-
-    .extraMargin
-      margin-top 12rem
