--- a/public/assets/css/content.styl
+++ b/public/assets/css/content.styl
@@ -36,7 +36,7 @@ md-content
 
   .mainContent
     height auto
-    margin-top 10rem
+    margin-top 3rem
     padding-top 0
 
   .contentContainer
